--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcsh 'Women -- History -- 19th century'
 - !lcc 'HQ'
 - !lcsh 'Women -- Employment'
+- GITenberg
 title: 'Die Frauenfrage
 
   ihre geschichtliche Entwicklung und wirtschaftliche Seite'
